# Stellar

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  AUDIT_PROMPTS.md  CLAUDE.backup.md  CLAUDE.md  DEMO_SCRIPT.md  GLOBAL_PROMPTS.md  HACKATHON_STRATEGY.md  LATEST_PROMPTS.md  LEARN_PROMPTS.md  MASTER_PROMPTS.md  New Home page.md  PITCH_SCRIPT.md  PROJECT_INFO.md  PROMPTS_PHASE2.md  PROMPTS_STELLAR_FIXES.md  README.md  SECURITY.md  SECURITY_MAINNET_AUDIT.md  SKY_PROMPTS.md  STELLAR_COMPETITIVE_UI_AUDIT.md  STELLAR_DESIGN_PROMPTS.md  STELLAR_MASTER_PLAN.md  STELLAR_MASTER_PROMPTS.md  STELLAR_UI_PLAYBOOK.md  STELLAR_VISUAL_REDESIGN_PROMPTS.md  TETHER_QVAC_RESUME.md  TETHER_QVAC_TRACK.md  UX_UI_AUDIT_STELLAR.md  ar-check.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  test result.md  tsconfig.json  vercel.json  vitest.config.ts
DONE PROMPTS/: FIX_PROMPTS.md  PHASE5_PROMPTS.md  STELLAR_AUDIT_ACTION_PLAN.md  STELLAR_AUDIT_REPORT.md
anchor/: .gitignore  Anchor.toml  package-lock.json  package.json
anchor/programs/stellar-observations/: Cargo.toml
anchor/programs/stellar-observations/src/: lib.rs
audit/: AUDIT_REPORT.md
docs/: Qvac Continue.md  dependency-security.md  earn-bounty-drafts.md  gita-grant-application.md  grant-applications.md  mainnet-cutover.md  observation-verification.md  proof-of-observation.md  qvac-demo-script.md  qvac-integration.md  qvac-submission.md  reputation-economy.md  solana-foundation-georgia-grant-application.docx  solana-foundation-georgia-grant-application.md  tether-grant-handoff.md  upgrade-plan.md  (+6 more)
(+618 files in other folders)
